[package]
name = "meow-github-app-auth"
version = "0.1.0"
edition = "2021"
authors = ["EliseZeroTwo <mail@elise.moe>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.44"
time = "0.3.25"
tokio = { version = "1.30.0", features = ["full"] }
